tests/negative-fixtures/external_crate_cannot_name_due_process_invocation/src/lib.rs
use tracewake_core::scheduler::DueProcessInvocation;

pub fn accept_due_process_invocation(_invocation: DueProcessInvocation) {}
